--- a/transition/views/bola.html
+++ b/transition/views/bola.html
@@ -8,8 +8,10 @@
     <title>Bola</title>
 </head>
 <body>
-    <div class="button">
-        Click Me!
+    <div class="bola-container">
+        <div class="bola">
+            <img src="../images/ball.png">
+        </div>
     </div>
 </body>
 </html>
