Commit hero area

--- a/AnimationBasic/views/hero-area.html
+++ b/AnimationBasic/views/hero-area.html
@@ -9,9 +9,15 @@
 </head>
 <body>
     <div class="slider">
+        <video muted autoplay loop>
+            <source src="../../videos/anim.mp4" type="video/mp4" />
+        </video>
         <div class="slider-container">
             <h1>Sou Desenvolvedor Web</h1>
-            <p>Adoro desenvolver Web sites e para o fazer precisso de chá</p>
+            <p class="desc">Adoro desenvolver Web sites e para o fazer precisso de chá</p>
+            <div class="cta">
+                Contacte-me
+            </div>
         </div>
     </div>
 </body>
