--- a/AnimationBasic/styles/hero-area.css
+++ b/AnimationBasic/styles/hero-area.css
@@ -10,19 +10,19 @@ body {
 
 @keyframes bg {
     0%, 100% {
-        background-color: rgba(0, 0, 0, 1); 
+        background-color: rgba(0, 0, 0, 0.5); 
     }
 
     25% {
-        background-color: rgba(255, 0, 0, 1); 
+        background-color: rgba(255, 0, 0, 0.5); 
     }
 
     50% {
-        background-color: rgba(0, 255, 0, 1); 
+        background-color: rgba(0, 255, 0, 0.5); 
     }
 
     75% {
-        background-color: rgba(0, 0, 255, 1); 
+        background-color: rgba(0, 0, 255, 0.5); 
     }
 }
 
@@ -37,8 +37,41 @@ body {
     justify-content: center;
     text-align: center;
     animation: bg 4s ease infinite;
+    overflow: hidden;
 }
 
-.slider-container {
+.slider video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
+}
 
+.slider-container h1 {
+    margin-bottom: 20px;
+    font-size: 64px;
+    text-shadow: 0 0 10px #ddd;
+}
+
+.desc {
+    margin: 20px 0;
+}
+
+.cta {
+    padding: 15px 120px;
+    display: inline-block;
+    font-size: 24px;
+    font-weight: bold;
+    border-radius: 30px;
+    cursor: pointer;
+    box-shadow: 0 0 10px #ddd, 0 0 20px #ddd;
+    transition: all 0.5s ease;
+}
+
+.cta:hover {
+    box-shadow: 0 0 10px #ddd, 0 0 20px #ddd;
+    background-color: #ddd;
+    text-shadow: 0 0 4px #111;
 }
